--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.<br> <a href="#">dilipkumard044@yahoo.com</a></p>
+          <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.<br> <a href="#">suchigaarish344@gmail.com</a></p>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Dilip Kumar D</h2>
+            <h2>Hey, I'm Suchi Gaarish</h2>
             <p class="mb-0">Freelance Documentation; Professional System Engineer</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
@@ -209,11 +209,11 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid">
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -226,7 +226,7 @@
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>-->
             </div><!-- End testimonial item -->
