--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <p><img src="assets/img/person_2.jpg" alt="Image" class="img-fluid"></p>
+            <p><img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid"></p>
             
             <p><a href="https://1drv.ms/b/c/919c1df4f673c66f/EX6Fj_MoI55AiCg1xRcYEJ0BNI65RSMsd95tJUy3Tar6JA?e=cpJO9t" class="readmore">Download my CV</a></p>
           </div>
@@ -133,5 +133,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
