--- a/KnowledgeShare.html
+++ b/KnowledgeShare.html
@@ -77,7 +77,7 @@ computers and resolving any support issues that are raised to the service desk.<
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Dilip Kumar D</h2>
+            <h2>Hey, I'm Suchi Gaarish</h2>
             <p class="mb-0">Freelance Documentation; Professional System Engineer</p>
           </div>
          </div>
@@ -231,7 +231,7 @@ computers and resolving any support issues that are raised to the service desk.<
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -243,7 +243,7 @@ computers and resolving any support issues that are raised to the service desk.<
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>-->
 
