--- a/KnowledgeShare.html
+++ b/KnowledgeShare.html
@@ -227,7 +227,7 @@ computers and resolving any support issues that are raised to the service desk.<
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid">
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
@@ -239,7 +239,7 @@ computers and resolving any support issues that are raised to the service desk.<
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_2.jpeg" alt="Image" class="img-fluid">
+                  <img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid">
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
