--- a/services.html
+++ b/services.html
@@ -297,11 +297,11 @@ Visit your website and test if your new password prompt is displaying as configu
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid">
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -309,11 +309,11 @@ Visit your website and test if your new password prompt is displaying as configu
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/person_2.jpeg" alt="Image" class="img-fluid">
+                  <img src="assets/img/Profile Photo.png" alt="Image" class="img-fluid">
                   <blockquote>
                     <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.</p>
                   </blockquote>
-                  <p>&mdash; Dilip Kumar D</p>
+                  <p>&mdash; Suchi Gaarish</p>
                 </div>
               </div>-->
             </div><!-- End testimonial item -->
@@ -362,3 +362,4 @@ Visit your website and test if your new password prompt is displaying as configu
 </body>
 
 </html>
+
