--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
         
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.<br> <a href="#">dilipkumard044@yahoo.com</a></p>
+          <p>A confident, efficient, and highly skilled system engineer with 9 years extensive practical experience of working with computers and resolving any support issues that are raised to the service desk.<br> <a href="#">suchigaarish344@gmail.com</a></p>
         </div>
       </div>
 
@@ -362,4 +362,5 @@ Visit your website and test if your new password prompt is displaying as configu
 </body>
 
 </html>
+
 
